# agent

./: .env.copy  README.md  main.py  pyproject.toml  train.ipynb  week06.md  week07.md
domain/: __init__.py  serve.py
learn-cc/TodoWrite/: todowrite.py
learn-cc/TodoWrite/s05_todo_write/example/: hello.py
learn-cc/TodoWrite/s05_todo_write/example/demo_pkg/: __init__.py  utils.py
learn-cc/TodoWrite/s05_todo_write/example/demo_pkg/tests/: test_utils.py
learn-cc/agent-loop/: loop.py
learn-cc/hooks/: hooks.py
learn-cc/permission/: permission.py
learn-cc/skills/: skills.py
learn-cc/subagent/: subagent.py
learn-cc/subagent/s06_subagent/example/: string_tools.py
learn-cc/tool_use/: tool_use.py
maintain_conversation/: README.md  chain_response.py  function_calling.py
