[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "anthropic>=0.109.2",
    "boto3>=1.43.32",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "maintain_conversation"]
